force-app/main/default/objects/integrator_da__Real_Time_Sync__c/integrator_da__Real_Time_Sync__c.object-meta.xml
<CustomObject>
    <label>Real Time Sync</label>
    <nameField>
        <displayFormat>RTSYNC-{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Real Time Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>