force-app/main/default/objects/integrator_da__Real_Time_Sync__c/fields/integrator_da__Connector_Id__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__Connector_Id__c</fullName>
    <label>Connector Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>