force-app/main/default/objects/integrator_da__Real_Time_Sync__c/fields/integrator_da__NetSuite_Sync_Error_Field__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__NetSuite_Sync_Error_Field__c</fullName>
    <inlineHelpText>If you would like to display sync error messages inside Salesforce please tell the sync which field to use by entering that field&apos;s &apos;API Name&apos; here.  Example: NetSuite_Sync_Error__c</inlineHelpText>
    <label>NetSuite Sync Error Field</label>
    <length>128</length>
    <type>Text</type>
</CustomField>