force-app/main/default/objects/integrator_da__Real_Time_Sync__c/fields/integrator_da__Origin__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__Origin__c</fullName>
    <label>Origin</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>