force-app/main/default/objects/integrator_da__Real_Time_Sync__c/fields/integrator_da__Qualifier__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__Qualifier__c</fullName>
    <label>Qualifier</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>