force-app/main/default/objects/integrator_da__Real_Time_Sync__c/fields/integrator_da__Referenced_Fields__c.field-meta.xml
<CustomField>
    <fullName>integrator_da__Referenced_Fields__c</fullName>
    <label>Referenced Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>