force-app/main/default/objects/integrator_da__Real_Time_Sync__c/validationRules/integrator_da__BatchSize_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>integrator_da__BatchSize_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>integrator_da__Batch_Size__c &lt; 4 || integrator_da__Batch_Size__c &gt; 200</errorConditionFormula>
    <errorDisplayField>integrator_da__Batch_Size__c</errorDisplayField>
    <errorMessage>The batch size should be in between 4 and 200</errorMessage>
</ValidationRule>