force-app/main/default/objects/integrator_da__Real_Time_Sync__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>integrator_da__Connector_Id__c</columns>
    <columns>integrator_da__Connection__c</columns>
    <columns>integrator_da__SObject_Type__c</columns>
    <columns>integrator_da__Disabled__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>